--- a/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonHTMLSpanish.html
@@ -1343,47 +1343,47 @@
 <tbody>
 <tr>
 <td class="analysis1" valign="top">&#xa0;Onset1<br/>﻿<?xml version='1.0' standalone='no'?>
-<svg width='104.900390625' height='83.7140625' version='1.1' xmlns='http://www.w3.org/2000/svg' contentScriptType='text/javascript'>
+<svg width='104.900390625' height='75.73359375' version='1.1' xmlns='http://www.w3.org/2000/svg' contentScriptType='text/javascript'>
 <script  id="clientEventHandlersJS">
 function OnClickLingTreeNode(node){}
 </script>
 <rect width="100%" height="100%" fill="#ffffff"/>
 <text x="47.79736328125" y="-22.2" font-family="System" font-size="12.0" fill="#000000"></text>
-<text x="0.6943359375" y="31.74140625" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
-<text x="0.0" y="77.70234375" font-family="System" font-size="12.0" fill="#000000">{n, c, u}</text>
-<line x1="19.072265625" y1="37.753125" x2="19.072265625" y2="61.753125" stroke="#000000" stroke-width="1.0"/>
-<text x="58.14453125" y="31.74140625" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
-<text x="73.126953125" y="77.70234375" font-family="System" font-size="12.0" fill="#000000">n</text>
-<line x1="76.5224609375" y1="37.753125" x2="76.5224609375" y2="61.753125" stroke="#000000" stroke-width="1.0"/>
+<text x="0.6943359375" y="23.7609375" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
+<text x="0.0" y="69.721875" font-family="System" font-size="12.0" fill="#000000">{n, c, u}</text>
+<line x1="19.072265625" y1="29.77265625" x2="19.072265625" y2="53.77265625" stroke="#000000" stroke-width="1.0"/>
+<text x="58.14453125" y="23.7609375" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
+<text x="73.126953125" y="69.721875" font-family="System" font-size="12.0" fill="#000000">n</text>
+<line x1="76.5224609375" y1="29.77265625" x2="76.5224609375" y2="53.77265625" stroke="#000000" stroke-width="1.0"/>
 </svg>
 </td>
 <td class="analysis2" valign="top">&#xa0;Onset1<br/>﻿<?xml version='1.0' standalone='no'?>
-<svg width='104.900390625' height='83.7140625' version='1.1' xmlns='http://www.w3.org/2000/svg' contentScriptType='text/javascript'>
+<svg width='104.900390625' height='75.73359375' version='1.1' xmlns='http://www.w3.org/2000/svg' contentScriptType='text/javascript'>
 <script  id="clientEventHandlersJS">
 function OnClickLingTreeNode(node){}
 </script>
 <rect width="100%" height="100%" fill="#ffffff"/>
 <text x="47.79736328125" y="-22.2" font-family="System" font-size="12.0" fill="#000000"></text>
-<text x="0.6943359375" y="31.74140625" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
-<text x="0.0" y="77.70234375" font-family="System" font-size="12.0" fill="#000000">{n, c, u}</text>
-<line x1="19.072265625" y1="37.753125" x2="19.072265625" y2="61.753125" stroke="#000000" stroke-width="1.0"/>
-<text x="58.14453125" y="31.74140625" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
-<text x="73.7509765625" y="77.70234375" font-family="System" font-size="12.0" fill="#000000">c</text>
-<line x1="76.5224609375" y1="37.753125" x2="76.5224609375" y2="61.753125" stroke="#000000" stroke-width="1.0"/>
+<text x="0.6943359375" y="23.7609375" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
+<text x="0.0" y="69.721875" font-family="System" font-size="12.0" fill="#000000">{n, c, u}</text>
+<line x1="19.072265625" y1="29.77265625" x2="19.072265625" y2="53.77265625" stroke="#000000" stroke-width="1.0"/>
+<text x="58.14453125" y="23.7609375" font-family="System" font-size="12.0" fill="#000000">&lt;Any&gt;</text>
+<text x="73.7509765625" y="69.721875" font-family="System" font-size="12.0" fill="#000000">c</text>
+<line x1="76.5224609375" y1="29.77265625" x2="76.5224609375" y2="53.77265625" stroke="#000000" stroke-width="1.0"/>
 </svg>
 </td>
 </tr>
 <tr>
 <td class="analysis1" valign="top">&#xa0;Onset2<br/>﻿<?xml version='1.0' standalone='no'?>
-<svg width='57.1328125' height='83.7140625' version='1.1' xmlns='http://www.w3.org/2000/svg' contentScriptType='text/javascript'>
+<svg width='57.1328125' height='75.73359375' version='1.1' xmlns='http://www.w3.org/2000/svg' contentScriptType='text/javascript'>
 <script  id="clientEventHandlersJS">
 function OnClickLingTreeNode(node){}
 </script>
 <rect width="100%" height="100%" fill="#ffffff"/>
 <text x="23.56640625" y="-22.2" font-family="System" font-size="12.0" fill="#000000"></text>
-<text x="0.0" y="31.74140625" font-family="System" font-size="12.0" fill="#000000"># &lt;Any&gt;</text>
-<text x="20.1708984375" y="77.70234375" font-family="System" font-size="12.0" fill="#000000">n</text>
-<line x1="23.56640625" y1="37.753125" x2="23.56640625" y2="61.753125" stroke="#000000" stroke-width="1.0"/>
+<text x="0.0" y="23.7609375" font-family="System" font-size="12.0" fill="#000000"># &lt;Any&gt;</text>
+<text x="20.1708984375" y="69.721875" font-family="System" font-size="12.0" fill="#000000">n</text>
+<line x1="23.56640625" y1="29.77265625" x2="23.56640625" y2="53.77265625" stroke="#000000" stroke-width="1.0"/>
 </svg>
 </td>
 <td class="analysis2" valign="top">&#xa0;</td>
