--- a/test/org/sil/syllableparser/testData/SyllabificationComparisonSHONCHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/SyllabificationComparisonSHONCHTMLEnglish.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <h2>Comparison of Approaches to Syllabification</h2>
-<div>Performed on January 24, 2019 8:07 AM</div>
+<div>Performed on January 24, 2019, 8:07 AM</div>
 <h3>Syllabifications</h3>
 <p>The following words have different syllabifications.  The number of words which differ is 3,723.</p>
 <p/>
