--- a/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonSameHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonSameHTMLEnglish.html
@@ -34,7 +34,7 @@
 <ol><li>test/org/sil/syllableparser/testData/CVTestData.ashedata</li>
 <li>test/org/sil/syllableparser/testData/CVTestData.ashedata</li>
 </ol>
-<div>Performed on April 9, 2016 8:07 AM</div>
+<div>Performed on April 9, 2016, 8:07 AM</div>
 <h3>Segment Inventory</h3>
 <p>Both have the same segment inventory.</p>
 <h3>Natural Classes</h3>
