--- a/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonHTMLEnglish.html
@@ -34,7 +34,7 @@
 <ol><li>test/org/sil/syllableparser/testData/CVTestData.ashedata</li>
 <li>test/org/sil/syllableparser/testData/CVTestData2.ashedata</li>
 </ol>
-<div>Performed on April 9, 2016 8:07 AM</div>
+<div>Performed on April 9, 2016, 8:07 AM</div>
 <h3>Segment Inventory</h3>
 <p>The following segments differ between the two.</p>
 <table border="1">
